# pre-commit-hooks

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
pre_commit_hooks/: set_module_version.py  set_perms_rw_for_g.py  util.py
