[metadata]
name = pre_commit_hooks
version = 1.0.0
description = Custom pre-commit hooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cmwedding-it/pre-commit-hooks
author = CM Wedding GmbH
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    black >= 23.1.0
python_requires = >=3.7

[options.entry_points]
console_scripts =
    set-module-version = pre_commit_hooks.set_module_version:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
